[gd_scene load_steps=32 format=3 uid="uid://ch3lyfrb4hms3"]

[ext_resource type="Script" path="res://game/crabs/Crab.gd" id="1_xe67b"]
[ext_resource type="Texture2D" uid="uid://cinsac2bckvcm" path="res://assets/graphics/robocrab.png" id="2_pcqpt"]
[ext_resource type="Script" uid="uid://les3lerwss74" path="res://game/crabs/CrabSprite.gd" id="3_a83at"]
[ext_resource type="Script" path="res://game/crabs/DebugLabel.gd" id="3_wxbeg"]
[ext_resource type="AudioStream" uid="uid://droer2prtggda" path="res://assets/sfx/poweron2.wav" id="4_3pxvx"]
[ext_resource type="PackedScene" uid="uid://ck3fg10c2vv46" path="res://game/crabs/Zs.tscn" id="4_grhim"]
[ext_resource type="AudioStream" uid="uid://qh5qcwmukbyf" path="res://assets/sfx/poweroff.wav" id="5_g3tvs"]
[ext_resource type="AudioStream" uid="uid://bktiyb8rih1f2" path="res://assets/sfx/dash.wav" id="6_s5pfp"]
[ext_resource type="AudioStream" uid="uid://mmp73kcler03" path="res://assets/sfx/step1.wav" id="7_e6rox"]
[ext_resource type="Script" path="res://game/crabs/Detector.gd" id="7_jab2t"]
[ext_resource type="AudioStream" uid="uid://dydsdao7apbh8" path="res://assets/sfx/step2.wav" id="8_gxgl0"]
[ext_resource type="PackedScene" uid="uid://cigl58gfahcla" path="res://game/crabs/sparks.tscn" id="9_67f86"]
[ext_resource type="AudioStream" uid="uid://b5cht8lwr0ltg" path="res://assets/sfx/welder.wav" id="11_cnkh1"]
[ext_resource type="Script" uid="uid://cltakdif8kjgh" path="res://game/crabs/DashSoundEffect.gd" id="11_xfgk8"]
[ext_resource type="PackedScene" uid="uid://cx3wmwc4x4ug0" path="res://game/crabs/vacuum.tscn" id="12_w2bfo"]
[ext_resource type="Script" uid="uid://bwpw728btyya" path="res://game/crabs/HealthBar.gd" id="13_ln3uw"]
[ext_resource type="Script" path="res://game/crabs/CrabAI.gd" id="16_lscu2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0bir5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d8v4d"]
atlas = ExtResource("2_pcqpt")
region = Rect2(22, 22, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_14qby"]
atlas = ExtResource("2_pcqpt")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjpdd"]
atlas = ExtResource("2_pcqpt")
region = Rect2(22, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_pawsh"]
atlas = ExtResource("2_pcqpt")
region = Rect2(0, 22, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjatq"]
atlas = ExtResource("2_pcqpt")
region = Rect2(22, 22, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_pey3j"]
atlas = ExtResource("2_pcqpt")
region = Rect2(22, 0, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_0lpsw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8v4d")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14qby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjpdd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pawsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjatq")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pey3j")
}],
"loop": true,
"name": &"sleep",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hx6oy"]
radius = 22.0227

[sub_resource type="CircleShape2D" id="CircleShape2D_t5lib"]
radius = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ny5g2"]
radius = 500.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6qtda"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2f6tg"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_4eqcg"]
default_font_size = 16

[node name="Crab" type="RigidBody2D"]
texture_filter = 1
physics_material_override = SubResource("PhysicsMaterial_0bir5")
gravity_scale = 0.0
lock_rotation = true
linear_damp = 10.0
script = ExtResource("1_xe67b")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_0lpsw")
animation = &"dash"
script = ExtResource("3_a83at")

[node name="Sparks" parent="." instance=ExtResource("9_67f86")]
position = Vector2(0, -26)
scale = Vector2(0.5, 0.5)
emitting = false
amount = 10
scale_amount_min = 0.15
scale_amount_max = 0.3

[node name="SandVacuum" parent="." instance=ExtResource("12_w2bfo")]
position = Vector2(0, 30)
scale = Vector2(0.5, 0.5)
color = Color(0.74902, 0.6, 0, 1)

[node name="WaterVacuum" parent="." instance=ExtResource("12_w2bfo")]
position = Vector2(0, 30)
scale = Vector2(0.5, 0.5)
color = Color(0, 1, 1, 1)

[node name="Zs" parent="." instance=ExtResource("4_grhim")]
position = Vector2(0, -34)
emitting = false
amount = 3

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hx6oy")

[node name="ReachArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7
script = ExtResource("7_jab2t")

[node name="reach_area_collider" type="CollisionShape2D" parent="ReachArea"]
shape = SubResource("CircleShape2D_t5lib")

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7
script = ExtResource("7_jab2t")

[node name="Area" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_ny5g2")

[node name="PowerOnSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3pxvx")
attenuation = 4.0

[node name="PowerOffSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_g3tvs")
attenuation = 4.0

[node name="DashSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_s5pfp")
attenuation = 4.0
script = ExtResource("11_xfgk8")

[node name="FootStepSound1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_e6rox")
volume_db = -15.0
attenuation = 4.0

[node name="FootStepSound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_gxgl0")
volume_db = -15.0
attenuation = 4.0

[node name="HarvestSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_cnkh1")
volume_db = -5.0
attenuation = 4.0

[node name="healthBar" type="ProgressBar" parent="."]
visible = false
offset_left = -32.0
offset_top = 48.0
offset_right = 32.0
offset_bottom = 52.0
theme_override_styles/fill = SubResource("StyleBoxFlat_6qtda")
value = 100.0
show_percentage = false
script = ExtResource("13_ln3uw")

[node name="healthNum" type="Label" parent="healthBar"]
visible = false
layout_mode = 0
offset_top = 4.0
offset_right = 64.0
offset_bottom = 27.0
text = "100.0"
label_settings = SubResource("LabelSettings_2f6tg")
horizontal_alignment = 1

[node name="DebugLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 43.0
offset_top = -18.0
offset_right = 83.0
offset_bottom = 5.0
theme = SubResource("Theme_4eqcg")
vertical_alignment = 2
script = ExtResource("3_wxbeg")

[node name="AI" type="Node" parent="."]
script = ExtResource("16_lscu2")
